RouteLogic-v4.0.0/force-app/main/default/objects/AI_Retry_Request__c/AI_Retry_Request__c.object-meta.xml
<CustomObject>
    <label>AI Retry Request</label>
    <nameField>
        <displayFormat>ARR-{0000000}</displayFormat>
        <label>AI Retry Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Retry Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>