RouteLogic-v4.0.0/force-app/main/default/objects/AI_Retry_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Retry Requests</relationshipLabel>
    <relationshipName>AI_Retry_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>