RouteLogic-v4.0.0/force-app/main/default/objects/AI_Retry_Request__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>