RouteLogic-v4.0.0/force-app/main/default/objects/AI_Retry_Request__c/fields/Request_Data__c.field-meta.xml
<CustomField>
    <fullName>Request_Data__c</fullName>
    <label>Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>