RouteLogic-v4.0.0/force-app/main/default/objects/AI_Retry_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>